Sun Nov 11 19:55:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2174_Regression/run_test.pl
        * tests/Bug_2319_Regression/run_test.pl
        * tests/Bug_2792_Regression/run_test.pl
        * tests/Bug_2795_Regression/run_test.pl
        * tests/Bug_2809_Regression/run_test.pl
        * tests/Bug_2935_Regression/run_test.pl
        * tests/IORManipulation/run_test.pl
        * tests/ORB_destroy/run_test.pl
        * tests/ORB_init/run_test.pl
        * tests/POA/Deactivate_Object/run_test.pl
        * tests/POA/wait_for_completion/run_test.pl
          Added support for VxWorks cross platform testing and simplified
          the files

Sun Nov 11 19:15:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IORManipulation/filter/run_test.pl:
          Added support for VxWorks cross platform testing

Sun Nov 11 19:08:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2809_Regression/run_test.pl:
          Added support for VxWorks cross platform testing

Sun Nov 11 19:06:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2345_Regression/run_test.pl:
          Added support for VxWorks cross platform testing

Sun Nov 11 19:04:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2319_Regression/run_test.pl:
          Added support for VxWorks cross platform testing

Sun Nov 11 19:01:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2134_Regression/run_test.pl:
          Added support for VxWorks cross platform testing

Fri Nov  9 11:29:21 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Naming/Persistent_Naming_Context.cpp:
          Removed msvc6 workaround and layout changes

        * orbsvcs/orbsvcs/Naming/Transient_Naming_Context.cpp:
        * orbsvcs/orbsvcs/Notify/MonitorControl/Statistic.h:
        * orbsvcs/orbsvcs/Notify/Sequence/SequenceProxyPushConsumer.h:
          Layout changes
